Add a coordinator logic to make sure all units of the standby cluster will stop their services before moving on and reconfiguring

--- a/actions.yaml
+++ b/actions.yaml
@@ -46,6 +46,18 @@ set-tls-private-key:
 
 promote-standby-cluster:
   description: Promotes the standby cluster of choice to a leader. Must be ran against the charm unit leader of the standby cluster.
-
-demote-primary-cluster:
-  description: Demotes the primary cluster of choice to a standby. Must be ran against the charm unit leader of the standby cluster.
+  params:
+    force:
+      type: boolean
+      default: False
+      description: |
+        WARNING: this option set to True WILL WIPE OUT your current primary cluster!
+        If this option and "force-really-really-mean-it" are set both to true, then this unit will take over the primary role.
+        It only works in the case of cross-cluster replication, where both clusters are connected to each other in the async-primary.
+    force-really-really-mean-it:
+      type: boolean
+      default: False
+      description: |
+        WARNING: this option set to True WILL WIPE OUT your current primary cluster!
+        If this option and "force" are set both to true, then this unit will take over the primary role.
+        It only works in the case of cross-cluster replication, where both clusters are connected to each other in the async-primary.
