Use poetry package-mode=false
Added in poetry 1.8

(metadata unused since charm is not a Python package)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,14 +2,7 @@
 # See LICENSE file for licensing details.
 
 [tool.poetry]
-name = "postgresql-k8s"
-version = "0.0.1-dev.0"
-description = ""
-authors = []
-license = "Apache-2.0"
-readme = "README.md"
-homepage = "https://charmhub.io/postgresql-k8s"
-repository = "https://github.com/canonical/postgresql-k8s-operator"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
