--- a/actions.yaml
+++ b/actions.yaml
@@ -21,7 +21,7 @@ create-replication:
 get-primary:
   description: Get the unit with is the primary/leader in the replication.
 get-password:
-  description: Change the system user's password, which is used by charm.
+  description: Get the system user's password, which is used by charm.
     It is for internal charm users and SHOULD NOT be used by applications.
   params:
     username:
