--- a/.github/workflows/sync_docs.yaml
+++ b/.github/workflows/sync_docs.yaml
@@ -5,7 +5,7 @@ name: Sync docs from Discourse
 on:
   workflow_dispatch:
   schedule:
-    - cron: '53 0 * * *'
+    - cron: '53 0 * * *'    # Daily at 00:53 UTC
 
 jobs:
   sync-docs:
