--- a/config.yaml
+++ b/config.yaml
@@ -304,7 +304,7 @@ options:
     type: boolean
     description: Enable timescaledb extension
   plugin_audit_enable:
-    default: false
+    default: true
     type: boolean
     description: Enable pgAudit extension
   profile:
