Fix connections logging parameters
Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

--- a/config.yaml
+++ b/config.yaml
@@ -27,12 +27,12 @@ options:
     description: |
       Logs each successful connection.
     type: boolean
-    default: false
+    default: true
   logging_log_disconnections:
     description: |
       Logs end of a session, including duration.
     type: boolean
-    default: false
+    default: true
   logging_log_lock_waits:
     description: |
       Logs long lock waits.
