--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,11 +28,11 @@ ops = ">=2.0.0"
 poetry-core = "*"
 # data_platform_libs/v0/upgrade.py requires pydantic ^1.10
 # grafana_agent/v0/cos_agent.py requires pydantic <2
-# tempo_k8s/v2/tracing.py supports both pydantic <2 and pydantic 2
+# tempo_coordinator_k8s/v0/tracing.py supports both pydantic <2 and pydantic 2
 pydantic = "^1.10, <2"
 # grafana_agent/v0/cos_agent.py
 cosl = "*"
-# tempo_k8s/v1/charm_tracing.py
+# tempo_coordinator_k8s/v0/charm_tracing.py
 opentelemetry-exporter-otlp-proto-http = "1.21.0"
 
 [tool.poetry.group.format]
