--- a/src/prometheus_alert_rules/pgbouncer_rules.yaml
+++ b/src/prometheus_alert_rules/pgbouncer_rules.yaml
@@ -13,8 +13,11 @@ groups:
       labels:
         severity: warning
       annotations:
-        summary: PGBouncer active connections (instance {{ $labels.instance }})
-        description: "PGBouncer pools are filling up\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+        summary: PgBouncer active connections (instance {{ $labels.instance }})
+        description: |
+        PgBouncer pools are filling up.
+        VALUE = {{ $value }}
+        LABELS = {{ $labels }}
 
     # 2.5.2
     # 10 -> 3
@@ -24,8 +27,12 @@ groups:
       labels:
         severity: warning
       annotations:
-        summary: PGBouncer errors (instance {{ $labels.instance }})
-        description: "PGBouncer is logging errors. This may be due to a a server restart or an admin typing commands at the pgbouncer console.\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+        summary: PgBouncer errors (instance {{ $labels.instance }})
+        description: |
+        PgBouncer is logging errors.
+        This may be due to a a server restart or an admin typing commands at the PgBouncer console.
+        VALUE = {{ $value }}
+        LABELS = {{ $labels }}
 
     # 2.5.3
     - alert: PgbouncerMaxConnections
@@ -34,5 +41,8 @@ groups:
       labels:
         severity: critical
       annotations:
-        summary: PGBouncer max connections (instance {{ $labels.instance }})
-        description: "The number of PGBouncer client connections has reached max_client_conn.\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+        summary: PgBouncer max connections (instance {{ $labels.instance }})
+        description: |
+        The number of PgBouncer client connections has reached `max_client_conn`.
+        VALUE = {{ $value }}
+        LABELS = {{ $labels }}
