--- a/src/prometheus_alert_rules/patroni_rules.yaml
+++ b/src/prometheus_alert_rules/patroni_rules.yaml
@@ -7,13 +7,16 @@ groups:
   rules:
 
     - alert: PatroniPostgresqlDown
-      expr: "patroni_postgres_running == 0"
+      expr: 'patroni_postgres_running == 0'
       for: 0m
       labels:
         severity: critical
       annotations:
-        summary: Patroni Posrgresql Down (instance {{ $labels.instance }})
-        description: "Patroni Postgresql instance is down\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+        summary: Patroni PostgreSQL is down (instance {{ $labels.instance }})
+        description: |
+        Patroni Postgresql instance is down.
+        VALUE = {{ $value }}
+        LABELS = {{ $labels }}
 
     # 2.4.1
     - alert: PatroniHasNoLeader
@@ -23,4 +26,7 @@ groups:
         severity: critical
       annotations:
         summary: Patroni has no Leader (instance {{ $labels.instance }})
-        description: "A leader node (neither primary nor standby) cannot be found inside the cluster {{ $labels.scope }}\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+        description: |
+        A leader node (neither primary nor standby) cannot be found inside the cluster {{ $labels.scope }}.
+        VALUE = {{ $value }}
+        LABELS = {{ $labels }}
